--- a/packages/insight/src/components/coin-list/coin-list.html
+++ b/packages/insight/src/components/coin-list/coin-list.html
@@ -8,8 +8,8 @@
     </div>
     <ion-row *ngFor="let tx of txs; let i = index">
       <ion-col col-12 *ngIf="i < limit && (tx.spentTxid !== '' || tx.mintTxid)">
-        <coin [blockTipHeight]="blockTipHeight" *ngIf="chainNetwork.chain === 'BTC' || chainNetwork.chain === 'BCH'" [coin]="tx" [chainNetwork]="chainNetwork"></coin>
-        <transaction-details-eth *ngIf="chainNetwork.chain === 'ETH'" [tx]="tx" [showCoins]="true" [chainNetwork]="chainNetwork"></transaction-details-eth>
+        <coin [blockTipHeight]="blockTipHeight" [coin]="tx"></coin>
+        <!-- <transaction-details-eth *ngIf="chainNetwork.chain === 'ETH'" [tx]="tx" [showCoins]="true"></transaction-details-eth> -->
       </ion-col>
     </ion-row>
     <ion-row *ngIf="limit < txs.length">
