--- a/packages/insight/src/components/latest-blocks/latest-blocks.html
+++ b/packages/insight/src/components/latest-blocks/latest-blocks.html
@@ -34,14 +34,14 @@
           {{ block.time * 1000 | date:'long' }}
         </ion-col>
         <ion-col>
-          {{ block.txlength }}
+          {{ block.tx.length }}
         </ion-col>
         <ion-col>
           {{ block.size }}
         </ion-col>
       </ion-row>
 
-      <ion-row *ngIf="showAllBlocksButton" class="blocks-cta">
+      <!-- <ion-row *ngIf="showAllBlocksButton" class="blocks-cta">
         <ion-col text-center>
           <button ion-button (click)="goToBlocks()" [disabled]="blocks.length == 0">Load More</button>
         </ion-col>
@@ -51,7 +51,7 @@
         <ion-infinite-scroll (ionInfinite)="loadMoreBlocks($event)">
           <loader [type]="'grid'"></loader>
         </ion-infinite-scroll>
-      </ion-row>
+      </ion-row> -->
     </div>
   </ion-grid>
 </div>
