--- a/packages/insight/src/components/transaction-details/transaction-details.html
+++ b/packages/insight/src/components/transaction-details/transaction-details.html
@@ -12,38 +12,38 @@
       </div>
     </ion-col>
     <ion-col col-5 text-right>
-      <ion-note *ngIf="tx.time">
+      <ion-note *ngIf="tx.blockTime">
         <span translate>mined on</span>
-        <time>{{ tx.time * 1000 | date:'medium' }}</time>
+        <time>{{ tx.blockTime * 1000 | date:'medium' }}</time>
       </ion-note>
     </ion-col>
   </ion-row>
 
   <ion-row align-items-end class="small" *ngIf="!showCoins">
     <ion-col col-12 text-right text-uppercase>
-      <ion-chip item-end color="danger" *ngIf="confirmations === -3">
+      <ion-chip item-end color="danger" *ngIf="tx.confirmations === -3">
         <ion-label>
           Invalid
         </ion-label>
       </ion-chip>
-      <ion-chip item-end color="warning" *ngIf="confirmations === -1">
+      <ion-chip item-end color="warning" *ngIf="tx.confirmations === -1">
         <ion-label>
           Unconfirmed
         </ion-label>
       </ion-chip>
-      <ion-chip item-end color="primary" *ngIf="confirmations === 1">
+      <ion-chip item-end color="primary" *ngIf="tx.confirmations === 1">
         <ion-label>
           1 Confirmation
         </ion-label>
       </ion-chip>
-      <ion-chip item-end color="primary" *ngIf="confirmations > 1">
+      <ion-chip item-end color="primary" *ngIf="tx.confirmations > 1">
         <ion-label>
-          {{ confirmations }} Confirmations
+          {{ tx.confirmations }} Confirmations
         </ion-label>
       </ion-chip>
       <ion-chip item-end color="default">
         <ion-label>
-          {{ currencyProvider.getConvertedNumber(tx.valueOut, chainNetwork.chain) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
+          <!-- {{ currencyProvider.getConvertedNumber(tx.valueOut, chainNetwork.chain) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }} -->
         </ion-label>
       </ion-chip>
     </ion-col>
@@ -51,17 +51,15 @@
 
   <ion-row *ngIf="showCoins" align-items-start>
     <ion-col col-12 col-md-5>
-
-      <ion-list [hidden]="!tx.isCoinBase">
+      <ion-list [hidden]="!tx.coinbase">
         <ion-item>
           No Inputs (Newly Generated Coins)
         </ion-item>
       </ion-list>
 
-      <ion-list [hidden]="tx.isCoinBase">
-        <ion-item *ngFor="let vin of aggregateItems(tx.vin); let i = index ">
-          <button item-start ion-button *ngIf="expanded" (click)="goToTx(vin.items[i].mintTxid, i, false)" clear
-            icon-only>
+      <ion-list [hidden]="tx.coinbase">
+        <ion-item *ngFor="let vin of tx.coins.inputs; let i = index ">
+          <button item-start ion-button *ngIf="expanded" (click)="goToTx(vin.items[i].mintTxid, i, false)" clear icon-only>
             <ion-icon color="primary" name="ios-arrow-forward"></ion-icon>
           </button>
 
@@ -72,22 +70,21 @@
             </p>
           </div>
           <div [hidden]="!expanded">
-            <p *ngIf="confirmations > 0">
-              <b>Confirmations</b> {{ confirmations }}</p>
+            <p *ngIf="tx.confirmations > 0">
+              <b>Confirmations</b> {{ tx.confirmations }}</p>
             <p>
               <b>Unlocking Script</b>
             </p>
-            <div *ngFor="let item of vin.items">
-              <div *ngIf="item.scriptSig">
+         
+              <div *ngIf="vin.script">
                 <div class="unlocking-script">
-                  <p>{{ item.scriptSig.asm }}
+                  <p>{{ vin.script.asm }}
                 </div>
               </div>
-            </div>
           </div>
 
           <div item-end>
-            {{ currencyProvider.getConvertedNumber(vin.value, chainNetwork.chain) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
+            {{ vin.value }} {{ currencyProvider.currencySymbol }}             
           </div>
         </ion-item>
 
@@ -99,7 +96,6 @@
           </div>
         </ion-item>
       </ion-list>
-
     </ion-col>
 
     <ion-col col-12 col-md-1 text-center class="arrow-forward">
@@ -108,7 +104,7 @@
 
     <ion-col col-12 col-md-6>
       <ion-list>
-        <ion-item *ngFor="let vout of tx.vout; let i = index">
+        <ion-item *ngFor="let vout of tx.coins.outputs; let i = index">         
           <div>
             <div class="ellipsis">
               <p>
@@ -131,7 +127,7 @@
           </div>
 
           <div item-end>
-            {{ currencyProvider.getConvertedNumber(vout.value, chainNetwork.chain) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
+            {{ vout.value }} {{ currencyProvider.currencySymbol }}
             <span [hidden]="!vout.spentTxid">(S)</span>
             <span [hidden]="vout.spentTxid">(U)</span>
           </div>
@@ -160,27 +156,27 @@
       <div *ngIf="!tx.isCoinBase && currencyProvider.getConvertedNumber(tx.fee) >= 0">
         <ion-chip>
           <ion-label>Fee
-            <span text-nowrap>{{ currencyProvider.getConvertedNumber(tx.fee, chainNetwork.chain) | number:'1.0-8' }}
-              {{ currencyProvider.currencySymbol }}</span>
+            <!-- <span text-nowrap>{{ currencyProvider.getConvertedNumber(tx.fee, chainNetwork.chain) | number:'1.0-8' }}
+              {{ currencyProvider.currencySymbol }}</span> -->
           </ion-label>
         </ion-chip>
       </div>
     </ion-col>
     <ion-col col-6 text-right>
-      <ion-chip color="danger" *ngIf="confirmations === -3">
+      <ion-chip color="danger" *ngIf="tx.confirmations === -3">
         <ion-label>Invalid</ion-label>
       </ion-chip>
-      <ion-chip  color="warning" *ngIf="confirmations === -1">
+      <ion-chip  color="warning" *ngIf="tx.confirmations === -1">
         <ion-label>Unconfirmed</ion-label>
       </ion-chip>
-      <ion-chip  color="primary" *ngIf="confirmations === 1">
+      <ion-chip  color="primary" *ngIf="tx.confirmations === 1">
         <ion-label>1 Confirmation</ion-label>
       </ion-chip>
-      <ion-chip color="primary" *ngIf="confirmations > 1">
-        <ion-label>{{ confirmations }} Confirmations
+      <ion-chip color="primary" *ngIf="tx.confirmations > 1">
+        <ion-label>{{ tx.confirmations }} Confirmations
         </ion-label>
       </ion-chip>
-      <ion-chip color="danger" *ngIf="tx.isRBF && confirmations === -1">
+      <ion-chip color="danger" *ngIf="tx.isRBF && tx.confirmations === -1">
         <ion-label>Replace By Fee (RBF) enabled
         </ion-label>
       </ion-chip>
@@ -189,7 +185,7 @@
         </ion-label>
       </ion-chip>
       <ion-chip color="default">
-        <ion-label>{{ currencyProvider.getConvertedNumber(tx.valueOut, chainNetwork.chain) | number:'1.0-8' }}
+        <ion-label>{{ tx.value }}
           {{ currencyProvider.currencySymbol }}
         </ion-label>
       </ion-chip>
