--- a/packages/insight/src/components/transaction-list/transaction-list.html
+++ b/packages/insight/src/components/transaction-list/transaction-list.html
@@ -4,8 +4,7 @@
   <ion-grid>
     <ion-row *ngFor="let tx of transactions; let i = index">
       <ion-col col-12 *ngIf="i < limit">
-        <transaction-details *ngIf="chainNetwork.chain === 'BTC' || chainNetwork.chain === 'BCH'" [page]="tx-list" [showCoins]="true" [tx]="tx" [chainNetwork]="chainNetwork"></transaction-details>
-        <transaction-details-eth *ngIf="chainNetwork.chain === 'ETH'" [showCoins]="true" [tx]="tx" [chainNetwork]="chainNetwork"></transaction-details-eth>
+        <transaction-details [page]="tx-list" [showCoins]="true" [tx]="tx"></transaction-details>       
       </ion-col>
     </ion-row>
     <ion-row *ngIf="limit < transactions.length">
