--- a/packages/insight/src/theme/variables.scss
+++ b/packages/insight/src/theme/variables.scss
@@ -28,7 +28,7 @@ $colors: (
   light: #f4f4f4,
   dark-light: #a2a2a2,
   dark: #373d42,
-  bp-blue: #0c204e,
+  bp-blue: #F4B517,
   light-blue: #299AD1,
 );
 
