--- a/src/components/rewards/rewards.html
+++ b/src/components/rewards/rewards.html
@@ -2,17 +2,17 @@
         <ion-col col-lg-6 col-12 class="text-center">
             <ion-row class="">
                 <ion-col col-lg-12 class="headerTitle">
-                    <h2>Smart Rewards</h2>
+                    <h2>1K+ SmartRewards 1MM+</h2>
                 </ion-col>                
             </ion-row>
             <ion-row class="contentRewards">
                 <ion-col col-lg-6 class="text-center">
-                    <h2>Smart Rewards</h2>
+                    <h2>SmartRewards</h2>
                     <h3>{{ smartRewards }} <span>%</span></h3>
                 </ion-col>
         
                 <ion-col col-lg-6 class="text-center">
-                    <h2>Super Rewards </h2>
+                    <h2>SuperRewards </h2>
                     <h3>{{ superRewards }} <span>%</span></h3>
                 </ion-col>
             </ion-row>
@@ -21,7 +21,7 @@
         <ion-col col-lg-6 col-12 class="text-center">
             <ion-row>
                 <ion-col col-lg-12 class="headerTitle">
-                    <h2>Smart Nodes</h2>
+                    <h2>SmartNodes</h2>
                 </ion-col>            
             </ion-row>
             <ion-row class="contentRewards">
@@ -34,8 +34,8 @@
                     <h3>{{ yearly_rewards }}</h3>
                 </ion-col>
                 <ion-col col-lg-4>
-                    <h2>Yearly Yield %</h2>
-                    <h3>{{ yearly_yield }}</h3>
+                    <h2>Yearly Yield</h2>
+                    <h3>{{ yearly_yield }} <span>%</span></h3>
                 </ion-col>
             </ion-row>
         </ion-col>
