--- a/src/components/rewards/rewards.html
+++ b/src/components/rewards/rewards.html
@@ -16,6 +16,18 @@
                     <h3>{{ superRewards }} <span>%</span></h3>
                 </ion-col>
             </ion-row>
+
+            <ion-row class="contentRewards">
+                <ion-col col-lg-6 class="text-center">
+                    <h2>SmartRewards Compound</h2>
+                    <h3>{{ smartCompounds }} <span>%</span></h3>
+                </ion-col>
+        
+                <ion-col col-lg-6 class="text-center">
+                    <h2>SuperRewards Compound</h2>
+                    <h3>{{ superCompounds }} <span>%</span></h3>
+                </ion-col>
+            </ion-row>
         </ion-col>
 
         <ion-col col-lg-6 col-12 class="text-center">
@@ -24,7 +36,7 @@
                     <h2>SmartNodes</h2>
                 </ion-col>            
             </ion-row>
-            <ion-row class="contentRewards">
+            <ion-row class="contentRewards" style="height: 200px;">
                 <ion-col col-lg-4>
                     <h2>SmartNode Collateral</h2>
                     <h3>{{ colateral }}</h3>
