Fix blocks compound

--- a/src/components/rewards/rewards.html
+++ b/src/components/rewards/rewards.html
@@ -7,27 +7,16 @@
             </ion-row>
             <ion-row class="contentRewards">
                 <ion-col col-lg-6 class="text-center">
-                    <h2>SmartRewards</h2>
+                    <h2>SmartRewards Yearly Yield % 4 week with compounding</h2>
                     <h3>{{ smartRewards }} <span>%</span></h3>
                 </ion-col>
         
                 <ion-col col-lg-6 class="text-center">
-                    <h2>SuperRewards </h2>
+                    <h2>SuperRewards Yearly Yield % 4 week with compounding </h2>
                     <h3>{{ superRewards }} <span>%</span></h3>
                 </ion-col>
             </ion-row>
-
-            <ion-row class="contentRewards">
-                <ion-col col-lg-6 class="text-center">
-                    <h2>SmartRewards Compound</h2>
-                    <h3>{{ smartCompounds }} <span>%</span></h3>
-                </ion-col>
-        
-                <ion-col col-lg-6 class="text-center">
-                    <h2>SuperRewards Compound</h2>
-                    <h3>{{ superCompounds }} <span>%</span></h3>
-                </ion-col>
-            </ion-row>
+            
         </ion-col>
 
         <ion-col col-lg-6 col-12 class="text-center">
@@ -36,7 +25,7 @@
                     <h2>SmartNodes</h2>
                 </ion-col>            
             </ion-row>
-            <ion-row class="contentRewards" style="height: 200px;">
+            <ion-row class="contentRewards">
                 <ion-col col-lg-4>
                     <h2>SmartNode Collateral</h2>
                     <h3>{{ colateral }}</h3>
