Updates and Address Locked Balance Fields

--- a/src/components/rewards/rewards.html
+++ b/src/components/rewards/rewards.html
@@ -2,7 +2,7 @@
         <ion-col col-lg-6 col-12 class="text-center">
             <ion-row class="">
                 <ion-col col-lg-12 class="headerTitle">
-                    <h2>1K+ SmartRewards 1MM+</h2>
+                    <h2>1K+  SmartRewards | SuperRewards 100K+</h2>
                 </ion-col>                
             </ion-row>
             <ion-row class="contentRewards">
